<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_act_calcular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"
            app:layout_constraintVertical_bias="0.22000003"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:padding="16dp"
            android:textAlignment="center"/>
    <Button
            android:text="@string/mainact_bt_fbk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actMain_btFBK" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:textSize="18sp"
            style="@style/Widget.AppCompat.Button.Colored"/>
    <Button
            android:text="@string/mainact_bt_fpk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/actMain_btFPK" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/actMain_btFBK"
            app:layout_constraintStart_toStartOf="@+id/actMain_btFBK"
            app:layout_constraintEnd_toEndOf="@+id/actMain_btFBK" android:textSize="18sp"
            android:visibility="visible"
            android:backgroundTint="@color/royal_blue"
            android:textColor="@color/white"/>

</android.support.constraint.ConstraintLayout>