<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".dic.DICEntrada2">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg__gradient_gray">

        <ImageView
                android:id="@+id/imageView5"
                style="@style/image_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/bg_city" />

        <LinearLayout
                android:id="@+id/linearLayout5"
                style="@style/dic_entrada_layout_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/textView16"
                    style="@style/dic_entrada_title"
                    android:text="Delineamento Inteiramente Casualizado (DIC)" />

            <TextView
                    android:id="@+id/textView17"
                    style="@style/dic_entrada_description"
                    android:layout_marginTop="12dp"
                    android:text="@string/DIC_instrucoes_entrada2" />

        </LinearLayout>

        <TextView
                android:id="@+id/actDIC_txvValoresParaT"
                style="@style/dic_entrada_subtitle"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/open_sans_light"
                android:text="Valores para T1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        <TextView
                android:id="@+id/actDIC_txvValores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/open_sans_light"
                android:text="(os valores digitados aparecerão aqui)"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actDIC_txvValoresParaT" />

        <EditText
                android:id="@+id/actDIC_edtxEntrada"
                style="@style/entrada_fbk_fpk_dic"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/open_sans_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actDIC_txvValores" />

        <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actDIC_edtxEntrada">

            <Button
                    android:id="@+id/actDIC_btAdicionar"
                    style="@style/dic_entrada_bt_avancar"
                    android:text="@string/avancar" />

            <Button
                    android:id="@+id/actDIC_btCalcular"
                    style="@style/dic_entrada_bt_avancar"
                    android:text="@string/calcular"
                    android:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>